# PointNet_learning

./: .gitignore  train_segmentation.py
pointnet/: model.py
test/: learn.py
utils/: CMakeLists.txt  dataset.py  read_ply.cpp  show_ply.cpp
